--- a/index.html
+++ b/index.html
@@ -180,21 +180,21 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/front-end.svg" alt="Front End Developer">
+                            <img src="assets/img/front-end.svg" alt="Diseño UX">
                             <h4>Diseño UX</h4>
                             <p>Creando experiencias de usuario fluidas que deleiten y retengan a su audiencia.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/back-end.svg" alt="Back End Developer">
+                            <img src="assets/img/back-end.svg" alt="Diseño UI">
                             <h4>Diseño UI</h4>
                             <p>Creación de interfaces de usuario visualmente impactantes e intuitivas que cautiven y atraigan.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/consultancy.svg" alt="Coding">
+                            <img src="assets/img/consultancy.svg" alt="Consultoría">
                             <h4>Consultoría</h4>
                             <p>Estratégias para maximizar la conversión y la satisfacción del usuario.</p>
                         </div><!-- /.service -->
