--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-1.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-1.jpg" alt="Agencia de Diseño UX UI">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Agencia de Diseño UX UI</h4>
@@ -352,11 +352,11 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-2.jpg" alt="App Registro de Emociones">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">App Registro de Emociones</h4>
-            <p>Caso de estudio .</p>
+            <p>Caso de estudio.</p>
           </div>
           <div class="modal-footer">
             <a href="https://www.figma.com/proto/0vvqynViuCNxu55e3p9Loq/App-Emociones?t=lbrFarigotAYWZOl-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&node-id=4-474" class="btn btn-fill">Visitar Figma</a>
@@ -370,7 +370,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-3.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-3.jpg" alt="Web Directorio de Diseñadores">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Web Directorio de Diseñadores</h4>
@@ -388,7 +388,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-4.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-4.jpg" alt="Tienda Online">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Tienda Online</h4>
@@ -406,7 +406,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-5.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-5.jpg" alt="Académia de Diseño UX UI">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Académia de Diseño UX UI</h4>
@@ -424,7 +424,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-6.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-6.jpg" alt="Web de Investigación de usuarios">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Web de Investigación de usuarios</h4>
