Se agrega la descripción en las imagenes

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-1.jpg" class="img-res" alt="Agencia de Diseño UX UI">
                             <div class="portfolio-item-info">
                                 <h4>Agencia de Diseño UX UI</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -222,7 +222,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-2.jpg" class="img-res" alt="App Registro de Emociones">
                             <div class="portfolio-item-info">
                                 <h4>App Registro de Emociones</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -232,7 +232,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-3.jpg" class="img-res" alt="Web Directorio de Diseñadores">
                             <div class="portfolio-item-info">
                                 <h4>Web Directorio de Diseñadores</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -242,7 +242,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-4.jpg" class="img-res" alt="Tienda Online">
                             <div class="portfolio-item-info">
                                 <h4>Tienda Online</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -252,7 +252,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-5.jpg" class="img-res" alt="Académia de Diseño UX UI">
                             <div class="portfolio-item-info">
                                 <h4>Académia de Diseño UX UI</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -262,7 +262,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-6.jpg" class="img-res" alt="Investigación de usuarios">
                             <div class="portfolio-item-info">
                                 <h4>Investigación de usuarios</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -334,7 +334,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-1.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-1.jpg" alt="Agencia de Diseño UX UI">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Agencia de Diseño UX UI</h4>
@@ -352,7 +352,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-2.jpg" alt="App Registro de Emociones">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">App Registro de Emociones</h4>
@@ -370,7 +370,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-3.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-3.jpg" alt="Web Directorio de Diseñadores">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Web Directorio de Diseñadores</h4>
@@ -388,7 +388,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-4.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-4.jpg" alt="Tienda Online">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Tienda Online</h4>
@@ -406,7 +406,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-5.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-5.jpg" alt="Académia de Diseño UX UI">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Académia de Diseño UX UI</h4>
@@ -424,7 +424,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-6.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-6.jpg" alt="Web de Investigación de usuarios">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Web de Investigación de usuarios</h4>
